--- a/admin.html
+++ b/admin.html
@@ -22,7 +22,7 @@
     }
 
     form {
-      max-width: 600px;
+      max-width: 700px;
       background: #fff;
       padding: 2em;
       border-radius: 12px;
@@ -64,6 +64,52 @@
     button:hover {
       background: #a55a50;
     }
+
+    #filterBar {
+      margin: 2em 0;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1em;
+      align-items: center;
+    }
+
+    #filterBar input,
+    #filterBar select {
+      padding: 8px;
+      font-size: 1em;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      background: #fff;
+      margin-top: 2em;
+    }
+
+    table,
+    th,
+    td {
+      border: 1px solid #ccc;
+    }
+
+    th,
+    td {
+      padding: 10px;
+      text-align: left;
+    }
+
+    thead {
+      background: #f4e4df;
+    }
+
+    img.thumb {
+      width: 60px;
+      height: 60px;
+      object-fit: cover;
+      border-radius: 6px;
+    }
   </style>
 </head>
 
@@ -82,11 +128,24 @@
     <label for="price">Цена (₸)</label>
     <input type="number" id="price" required>
 
+    <label for="stock">Количество (на складе)</label>
+    <input type="number" id="stock" required>
+
     <label for="category">Категория</label>
     <select id="category" required>
       <option value="">Выберите категорию</option>
       <option value="ароматические">Ароматические</option>
       <option value="декоративные">Декоративные</option>
+    </select>
+
+    <label for="tags">Теги (через запятую)</label>
+    <input type="text" id="tags" placeholder="Например: новинка,весна,подарок">
+
+    <label for="status">Статус</label>
+    <select id="status">
+      <option value="">Без метки</option>
+      <option value="Новинка">Новинка</option>
+      <option value="Скоро в продаже">Скоро в продаже</option>
     </select>
 
     <label for="images">Фото (можно несколько)</label>
@@ -97,6 +156,36 @@
 
     <button type="submit">Сохранить</button>
   </form>
+
+  <div id="filterBar">
+    <input type="text" id="searchInput" placeholder="Поиск по названию...">
+    <select id="categoryFilter">
+      <option value="">Все категории</option>
+      <option value="ароматические">Ароматические</option>
+      <option value="декоративные">Декоративные</option>
+    </select>
+    <select id="statusFilter">
+      <option value="">Все статусы</option>
+      <option value="Новинка">Новинка</option>
+      <option value="Скоро в продаже">Скоро в продаже</option>
+    </select>
+  </div>
+
+  <h2>Список товаров</h2>
+  <table id="productTable">
+    <thead>
+      <tr>
+        <th>Фото</th>
+        <th>Название</th>
+        <th>Категория</th>
+        <th>Цена</th>
+        <th>Остаток</th>
+        <th>Статус</th>
+        <th>Действия</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
   <script src="admin.js"></script>
 </body>
